# FantasyFootballCodexFeatures

./: .gitignore
feature-auth/: .dockerignore  DEVELOPMENT_NOTES.md  Dockerfile  INTEGRATION_GUIDE.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
feature-auth/app/: main.py
feature-auth/app/core/: __init__.py  auth_dependencies.py  config.py  database.py  logging.py
feature-auth/app/models/: user.py  user_integration.py
feature-auth/app/routers/: auth.py
feature-auth/app/schemas/: auth.py
feature-auth/app/services/: user_service.py
feature-auth/app/utils/: auth_utils.py
feature-auth/tests/: conftest.py  test_auth.py
feature-database-setup/: .gitattributes  .gitignore  DEVELOPMENT_NOTES.md  INTEGRATION_GUIDE.md  README.md  database.py  enums.py  requirements.txt  test_db.py  test_nfl_data.py
feature-database-setup/models/: base.py  betting.py  fantasy.py  intelligence.py  ml.py  roster.py  social_media_injury.py  sql_functions.py  stats.py  teams_players.py  user.py
feature-database-setup/scripts/: check_db_contents.py  check_schema.py  cleanup_favoriteplayer.py  cleanup_game_table.py  cleanup_playercareerstats.py  cleanup_playerprojection.py  cleanup_playerseasonstats.py  cleanup_team_columns.py  cleanup_team_references.py  cleanup_teamstats.py  cleanup_weekly_roster.py  clear_players.py  create_social_media_tables.py  create_team_table.py  data_cleaning.py  dev_smoke_test.py  ingest_pbp_raw.py  insert_teams.py  (+11 more)
feature-home-page/: .gitignore  README.md  next.config.js  package-lock.json  package.json
(+20 files in other folders)
